added pip to apt

--- a/pi.yaml
+++ b/pi.yaml
@@ -13,6 +13,7 @@
             - mosh
             - ssh
             - git
+            - python-pip
 
       - name: install pip packages
         pip: name={{ item }}
