added dotfiles repo

--- a/pi.yaml
+++ b/pi.yaml
@@ -21,3 +21,8 @@
         with_items:
             - ouimeaux # wemo web interface
               
+      - name: git repos
+      git: repo={{ item.url }} dest={{ item.dest }} 
+          # defaults recursive=yes update=yes
+      with_items:
+          - { url: 'https://github.com/rothgar/dotfiles/', dest: '/home/pi/.dotfiles' }
