removed pip packages

--- a/pi.yml
+++ b/pi.yml
@@ -4,7 +4,7 @@
   gather_facts: false
   tasks:
       - name: Install apt packages
-        apt: name={{ item }} state=installed
+        apt: name={{ item }} state=latest
         with_items:
             - ansible
             - git
@@ -18,11 +18,6 @@
             - wakeonlan
             - znc
 
-      - name: install pip packages
-        pip: name={{ item }}
-        with_items:
-            - ouimeaux # wemo web interface
-              
       - name: git repos
         git: repo={{ item.url }} dest={{ item.dest }} 
         # defaults recursive=yes update=yes
