Using atosatto.docker-swarm to initialize swarm

--- a/main.yml
+++ b/main.yml
@@ -1,8 +1,10 @@
 ---
 - hosts: "{{ target | default('all') }}"
   become: True
-  gather_facts: false
   roles:
     - { role: pi-init, tags: init }
     - { role: pi-common, tags: common }
     - { role: pi-docker, tags: docker }
+    - { role: atosatto.docker-swarm, 
+        docker_dependencies: [ ],
+        tags: swarm }
